--- a/plots_and_notebooks/plot_sim.ipynb
+++ b/plots_and_notebooks/plot_sim.ipynb
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1162e7588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x116898358>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
