--- a/plots_and_notebooks/plot_sim.ipynb
+++ b/plots_and_notebooks/plot_sim.ipynb
@@ -51,7 +51,7 @@
     "    gal_type='ground_galsim_parametric',\n",
     "    psf_type='ps',\n",
     "    n_coadd=200,\n",
-    "    ps_kws={'trunc': 1})\n",
+    "    psf_kws={'trunc': 1})\n",
     "mbobs = sim.get_mbobs()"
    ]
   },
