--- a/plots_and_notebooks/plot_sim.ipynb
+++ b/plots_and_notebooks/plot_sim.ipynb
@@ -53,7 +53,7 @@
     "    psf_type='ps',\n",
     "    n_coadd=30,\n",
     "    n_coadd_psf=1,\n",
-    "    psf_kws={'trunc': 1})\n"
+    "    psf_kws={'trunc': 1})"
    ]
   },
   {
