fixed bug in PSF normalization

--- a/plots_and_notebooks/plot_ps_psf.ipynb
+++ b/plots_and_notebooks/plot_ps_psf.ipynb
@@ -74,9 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rng = np.random.RandomState()\n",
     "noise_level = 0\n",
@@ -86,8 +97,33 @@
     "        im_width=225, buff=225//2, scale=0.25, trunc=1, \n",
     "        noise_level=noise_level,\n",
     "        median_seeing=0.8)\n",
-    "    for i in range(30)]"
+    "    for i in range(30)]\n",
+    "\n",
+    "psf = galsim.Sum([p.getPSF(galsim.PositionD(x=10, y=10)) for p in psfs]).withFlux(1)\n",
+    "\n",
+    "psf.flux"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
