--- a/plots_and_notebooks/plot_ps_psf.ipynb
+++ b/plots_and_notebooks/plot_ps_psf.ipynb
@@ -74,6 +74,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 psfs:\n",
+      "    init: 0.012351 seconds\n",
+      "    draw: 0.002476 seconds\n",
+      "2 psfs:\n",
+      "    init: 0.019101 seconds\n",
+      "    draw: 0.004366 seconds\n",
+      "4 psfs:\n",
+      "    init: 0.038277 seconds\n",
+      "    draw: 0.006959 seconds\n",
+      "8 psfs:\n",
+      "    init: 0.074902 seconds\n",
+      "    draw: 0.012042 seconds\n",
+      "10 psfs:\n",
+      "    init: 0.087356 seconds\n",
+      "    draw: 0.015706 seconds\n",
+      "20 psfs:\n",
+      "    init: 0.180517 seconds\n",
+      "    draw: 0.034432 seconds\n",
+      "30 psfs:\n",
+      "    init: 0.284722 seconds\n",
+      "    draw: 0.058330 seconds\n",
+      "100 psfs:\n",
+      "    init: 0.942902 seconds\n",
+      "    draw: 0.162770 seconds\n",
+      "300 psfs:\n",
+      "    init: 2.865810 seconds\n",
+      "    draw: 0.503470 seconds\n",
+      "900 psfs:\n",
+      "    init: 8.420529 seconds\n",
+      "    draw: 1.419749 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "rng = np.random.RandomState()\n",
+    "\n",
+    "def _time_psf_sum(n):\n",
+    "    t0 = time.time()\n",
+    "    psfs = [\n",
+    "        PowerSpectrumPSF(\n",
+    "            rng=rng,\n",
+    "            im_width=225, buff=225//2, scale=0.263,\n",
+    "            median_seeing=0.8)\n",
+    "        for i in range(n)]\n",
+    "    dti = time.time() - t0\n",
+    "    \n",
+    "    t0 = time.time()\n",
+    "    for _ in range(2):\n",
+    "        if n > 1:\n",
+    "            p = galsim.Sum(\n",
+    "                [p.getPSF(galsim.PositionD(x=10, y=10)) for p in psfs[0:n]]\n",
+    "            ).withFlux(1)\n",
+    "        else:\n",
+    "            p = psfs[0].getPSF(galsim.PositionD(x=10, y=10))\n",
+    "\n",
+    "        if n > 1:\n",
+    "            p.drawImage(nx=17, ny=17, scale=0.263)\n",
+    "        else:\n",
+    "            p.drawImage(nx=17, ny=17, scale=0.263)\n",
+    "\n",
+    "    dt = (time.time() - t0)/2\n",
+    "    return dt, dti\n",
+    "\n",
+    "for i in [1, 2, 4, 8, 10, 20, 30, 100, 300, 900]:\n",
+    "    dt, dti = _time_psf_sum(i)\n",
+    "    print(\"%d psfs:\\n    init: %f seconds\\n    draw: %f seconds\" % (i, dti, dt), flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
