remove profiling code

--- a/plots_and_notebooks/plot_e2e_sim.ipynb
+++ b/plots_and_notebooks/plot_e2e_sim.ipynb
@@ -460,9 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.01 µs ± 202 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "\n",
@@ -471,9 +479,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.83 µs ± 231 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "\n",
