enforce min dist for pts

--- a/plots_and_notebooks/plot_sim.ipynb
+++ b/plots_and_notebooks/plot_sim.ipynb
@@ -31,6 +31,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x122070b00>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim = Sim(\n",
+    "    rng=np.random.RandomState(),\n",
+    "    g1=0.02,\n",
+    "    scale=0.263,\n",
+    "    gal_type='exp',\n",
+    "    psf_type='gauss',\n",
+    "    n_coadd=30,\n",
+    "    gal_kws={'min_dist': 0.5})\n",
+    "\n",
+    "mbobs = sim.get_mbobs()\n",
+    "plt.figure()\n",
+    "sns.heatmap(np.arcsinh(mbobs[0][0].image/np.std(mbobs[0][0].image[0:100])), square=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
